tester/testsuite/bad/bad066.jl
int foo () { return 0 };

int main () {
  "foo";
  foo();
  return 0;
}
